--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
         "lodash": "^4.17.4",
         "material-ui": "^0.20.2",
         "moment": "^2.29.1",
-        "node-sass": "^4.7.2",
         "normalize.css": "^8.0.0",
         "popper.js": "^1.12",
         "react": "^18.1.0",
@@ -48,10 +47,7 @@
         "react-scripts": "5.0.1",
         "redux": "^3.7.2",
         "redux-thunk": "^2.2.0",
-        "sass-loader": "^6.0.6",
-        "style-loader": "^0.20.1",
-        "uuid": "^3.2.1",
-        "validator": "8.0.0",
+        "toastr": "^2.1.4",
         "web-vitals": "^2.1.4"
     },
     "eslintConfig": {
